<resources>
    <string name="app_name">The Store</string>
    <string name="strHome">Home</string>
    <string name="strCategory">Category</string>
    <string name="strNotification">Notification</string>
    <string name="strProfile">Profile</string>
    <string name="strProfileInfo">Profile information</string>
    <string name="strName">Name:</string>
    <string name="strPhone">Phone:</string>
    <string name="strEmail">Email:</string>
    <string name="strAddressList">Address list</string>
    <string name="strOrderHistory">Order history</string>
    <string name="strWishlist">Wishlist</string>
    <string name="strVoucher">Voucher wallet</string>
    <string name="strMyReview">My rating</string>
    <string name="strChangePassword">Change password</string>
    <string name="strSupport">Support</string>
    <string name="strAddNewAddress">Add a new address</string>
    <string name="strEditAddress">Edit address</string>
    <string name="strFullName">Full name:</string>
    <string name="strPhoneNumber">Phone number:</string>
    <string name="strDateOfBirth">Date of birth:</string>
    <string name="strGender">Gender:</string>
    <string name="strMale">Male</string>
    <string name="strFemale">Female</string>
    <string name="strSaveChanges">Save change</string>
    <string name="strChooseLanguage">Choose language:</string>
    <string name="strEnglish">English</string>
    <string name="strVietnamese">Tiếng Việt</string>
    <string name="strSignout">Sign out</string>
    <string name="strProvince">Province/City:</string>
    <string name="strDistrict">District:</string>
    <string name="strWard">Ward:</string>
    <string name="strStreet">Street:</string>
    <string name="strSetAsDefaultAddress">Set as default address</string>
    <string name="strSaveAddress">Save address</string>
    <string name="strDeleteAddress">Delete address</string>
    <string name="strWelcome">Welcome back</string>
    <string name="strLogin">Login to your account</string>
    <string name="strHintName">Name</string>
    <string name="strHintEmail">Email</string>
    <string name="strHintPhone">Phone</string>
    <string name="strEnterPw">Password</string>
    <string name="strForgotPw">"Forgot Password? "</string>
    <string name="strSaveLogin">Remember me</string>
    <string name="strBtnLogin">Log In</string>
    <string name="strOr">OR</string>
    <string name="strDonotHaveAccount">Don’t have an Account?</string>
    <string name="strCreateAccount">Create Account</string>
    <string name="strRegister">Register</string>
    <string name="strCreateNewAccount">Create your new account</string>
    <string name="strHaveAccount">Do you have an account?</string>
    <string name="strEnterName">Enter your name*</string>
    <string name="strDOB">Enter date of birth</string>
    <string name="strAgree"><![CDATA[By signing up you agree to our Terms & Conditions and Privacy Policy]]></string>
    <string name="strSignUp">Sign Up</string>
    <string name="strAlreadyHaveAccount">"Already have an account? "</string>
    <string name="strChangeR2L">Log In</string>
    <string name="strConfirmPw">Confirm password</string>
    <string name="strGet">Get</string>
    <string name="strStarted">Started!</string>
    <string name="strText">Join us now and start Your Journey</string>
    <string name="strBtnWelcome">Explore Now</string>
    <string name="strTeam">\@2024 DELE.TEAM</string>
    <string name="strNoProduct">There are no items in the shopping cart</string>
    <string name="strChooseProduct">Shop now</string>
    <string name="strProductcatalog">Product catalog</string>
    <string name="strHorrified">Horrified</string>
    <string name="strNovel">Novel</string>
    <string name="strLiterature">Literature</string>
    <string name="strDetective">Detective</string>
    <string name="strScience">Science</string>
    <string name="strLove">Love</string>
    <string name="strSelfHelp">Self-help</string>
    <string name="strBrief">Brief</string>
    <string name="strComic">Comic</string>
    <string name="default_web_client_id">318647012345-7jsl5hpfrr5fonkvsg3454pqa1q57u1h.apps.googleusercontent.com</string>
    <string name="strProvideSms">Provide your account email for which you want to reset your password!</string>
    <string name="strConfirmPwText">Please enter your current password to verify</string>
    <string name="strRating">Rate Product</string>
    <string name="strSelectAll">Select all</string>
    <string name="strTotal">Total</string>
    <string name="strChatBotAsk">How can I help you?</string>
    <string name="strVerify">Verify</string>
    <string name="strSubmit">Submit</string>
    <string name="strCreateNewPw">Create New Password</string>
    <string name="strEnterNewPw">Enter new password</string>
    <string name="strResetPw">Reset password</string>
    <string name="strOrderDate">Order date:</string>
    <string name="strReceivedDate">Received date:</string>
    <string name="strBuyerInformation">Buyer information</string>
    <string name="strPaymentMethod">Payment method</string>
    <string name="strQuantity1">Quantity:</string>
    <string name="strTotalAmount">Total amount:</string>
    <string name="strListOfProducts">List of products</string>
    <string name="strPrePrice">Pre price</string>
    <string name="strShippingFee">Shipping fee</string>
    <string name="strDiscount">Discount</string>
    <string name="strTotalPayment">Total payment</string>
    <string name="strCancelOrder">Cancel order</string>
    <string name="strReOrder">Re-order</string>
    <string name="strEnterVoucherCode">Enter voucher code</string>
    <string name="strVoucherHint">Discount code or free shipping</string>
    <string name="strApply">Apply</string>
    <string name="strPaymentDetail">Payment detail</string>
    <string name="strAddress">Address</string>
    <string name="strBuyNow">Buy now</string>
    <string name="strDetailInformation">DETAIL INFORMATION</string>
    <string name="strAuthor">• Author:</string>
    <string name="strPublicationDate">• Publication date:</string>
    <string name="strCategory1">• Category:</string>
    <string name="strDescription">• Description:</string>
    <string name="strRelatedProducts">RELATED PRODUCTS</string>
    <string name="strReviews">REVIEWS</string>
    <string name="strADDTOCART">ADD TO CART</string>
    <string name="strBUYNOW">BUY NOW</string>
    <string name="strSearchHint">Search for books, authors</string>
    <string name="strRecentSearches">Recent searches</string>
    <string name="strBrowseByCategory">Browse by category</string>
    <string name="strDiscoverMoreOnInstant">Discover more on instant</string>
    <string name="strClearAll">Clear all</string>
    <string name="strSearchResults">Search results</string>
    <string name="strConfirm">Confirm</string>
    <string name="strOrderSuccessfully">Order has been placed successfully!</string>
    <string name="strContinueShopping">Continue shopping </string>
    <string name="strViewOrderDetail">View order detail</string>
    <string name="strOrderDetail">Order detail</string>
    <string name="strCATEGORY">CATEGORY</string>
    <string name="strTOPAUTHORS">TOP AUTHORS</string>
    <string name="strBESTSELLING">BEST SELLING</string>
    <string name="strNEWARRIVALS">NEW ARRIVALS</string>
    <string name="strFORYOU">FOR YOU</string>
    <string name="strSeeMore">See more</string>
    <string name="strDefault">Default</string>
    <string name="strOrderOn">"Order on "</string>
    <string name="strProducts">products</string>
    <string name="strViewDetails">View details</string>
    <string name="strRate">Rate</string>
    <string name="strOrderFrom">Order from:</string>
    <string name="strEXP">EXP:</string>
    <string name="strSaveAddressSuccessfully">Save address successfully</string>
    <string name="strFillAllFields">Please fill in all fields</string>
    <string name="strFailedLoadAddresses">Failed to load addresses</string>
    <string name="strCart">Cart</string>
    <string name="strCheckOut">Check out</string>
    <string name="strChooseItemInCart">Please choose an item to buy</string>
    <string name="strCheckOutDefault">Check out (0)</string>
    <string name="strPending">Pending</string>
    <string name="strDelivering">Delivering</string>
    <string name="strCompleted">Completed</string>
    <string name="strCanceled">Canceled</string>
    <string name="strPayment">Payment</string>
    <string name="strProductDetails">Product details</string>
    <string name="strcomment">comment</string>
    <string name="strLike">like</string>
    <string name="strAddImage">Add image</string>
    <string name="strHintRating">Share more thoughts on the product to help other buyer</string>
    <string name="strProductQuality">Product quality</string>
    <string name="strSuccessfulDelivery">Successful delivery:</string>
    <string name="strToRate">To rate</string>
    <string name="strMyReviews">My reviews</string>
    <string name="strNoReviews">This product has no reviews yet!</string>

</resources>