<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ProfileInfoActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strFullName"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtName"
        style="@style/Widget.Material3.TextInputEditText.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rectangle_background_shape"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/brown_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strPhoneNumber"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPhone"
        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rectangle_background_shape"
        android:ems="10"
        android:inputType="phone"
        android:paddingTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/brown_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strEmail"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtEmail"
        style="@style/Widget.Material3.TextInputEditText.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rectangle_background_shape"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/brown_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strDateOfBirth"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtDateOfBirth"
        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rectangle_background_shape"
        android:ems="10"
        android:focusable="false"
        android:inputType="none"
        android:onClick="showDatePickerDialog"
        android:paddingTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/brown_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strGender"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/brown_text"
            android:text="@string/strMale"
            android:textColor="@color/brown_text" />

        <RadioButton
            android:id="@+id/radFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:buttonTint="@color/brown_text"
            android:text="@string/strFemale"
            android:textColor="@color/brown_text" />

    </RadioGroup>

    <Button
        android:id="@+id/btnSaveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/brown_button"
        android:text="@string/strSaveChanges"
        android:textStyle="bold" />
</LinearLayout>