<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_baseline_check_circle_outline_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/strOrderSuccessfully"
        android:textColor="@color/brown_text"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnContinueShopping"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/brown_button"
        android:text="@string/strContinueShopping"
        android:textColor="@color/brown_text"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnViewOrder"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/brown_text"
        android:text="@string/strViewOrderDetail"
        android:textColor="@color/brown_button"
        android:textSize="20dp"
        android:textStyle="bold" />
</LinearLayout>