<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfirmPasswordActivity">

    <TextView
        android:id="@+id/textView39"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/strConfirmPwText"
        android:textColor="@color/brown_text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_security"
        android:drawableEnd="@drawable/ic_visibility"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/strEnterPw"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnConfirmPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/brown_button"
        android:text="@string/strVerify"
        android:textSize="20sp"
        android:textStyle="bold" />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/passwordTextInputLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="20dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginRight="20dp"-->

<!--        app:passwordToggleEnabled="true">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/edtPassword"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="58dp"-->
<!--            android:background="@drawable/input_bg"-->
<!--            android:hint="Enter Password"-->
<!--            android:paddingStart="20dp"-->
<!--            android:paddingTop="10dp"-->
<!--            android:paddingEnd="10dp"-->
<!--            android:paddingBottom="10dp"-->
<!--            tools:ignore="MissingConstraints" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

</LinearLayout>
